unpackaged/main/default/objects/Contract/fields/High_Risk_Indicator__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Indicator__c</fullName>
    <formula>IF((High_Risk__c = true), image(&quot;https://technologyone--c.ap21.content.force.com/servlet/servlet.ImageServer?id=015G000000BUclC&amp;oid=00D2O0000009e0J&quot;,&quot;*&quot;)
,&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Risk Indicator</label>
    <type>Text</type>
</CustomField>