unpackaged/main/default/objects/Contract/fields/High_Risk_Scope_Detail__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Scope_Detail__c</fullName>
    <inlineHelpText>High Risk Register scope inclusions included in the consulting services</inlineHelpText>
    <label>High Risk Scope Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>