unpackaged/main/default/objects/Contract/fields/Im_the_CDM_CAM__c.field-meta.xml
<CustomField>
    <fullName>Im_the_CDM_CAM__c</fullName>
    <formula>NOT(ISBLANK(Account.Owner.Id)) &amp;&amp; ( Account.Owner.Id  =  $User.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Im the CDM/CAM</label>
    <type>Checkbox</type>
</CustomField>