unpackaged/main/default/objects/Contract/fields/Im_the_SDM__c.field-meta.xml
<CustomField>
    <fullName>Im_the_SDM__c</fullName>
    <formula>NOT(ISBLANK(Account.SDM__c)) &amp;&amp; (Account.SDM__r.Id = $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Im the SDM</label>
    <type>Checkbox</type>
</CustomField>