unpackaged/main/default/objects/Contract/fields/Im_the_T1Direct_CAM__c.field-meta.xml
<CustomField>
    <fullName>Im_the_T1Direct_CAM__c</fullName>
    <formula>NOT(ISBLANK(Account.T1Direct_CAM__c)) &amp;&amp; (Account.T1Direct_CAM__r.Id = $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Im the T1Direct CAM</label>
    <type>Checkbox</type>
</CustomField>