unpackaged/main/default/objects/Contract/fields/Implementation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Implementation Completed</label>
    <type>Checkbox</type>
</CustomField>