unpackaged/main/default/objects/Contract/fields/Implementation_Fee_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Fee_Clause_Ref__c</fullName>
    <label>Implementation Fee Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>