unpackaged/main/default/objects/Contract/fields/Implementation_Fee_Details__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Fee_Details__c</fullName>
    <inlineHelpText>Payment terms, management of time &amp; materials estimates and delays</inlineHelpText>
    <label>Implementation Fee Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>