unpackaged/main/default/objects/Contract/fields/Implementation_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Fee_Type__c</fullName>
    <label>Implementation Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Time and Materials</fullName>
            </value>
            <value>
                <fullName>Capped Time and Materials</fullName>
            </value>
            <value>
                <fullName>Software Live</fullName>
            </value>
            <value>
                <fullName>None - No Implementation Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>