unpackaged/main/default/objects/Contract/fields/Implementation_Services_Amount__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Services_Amount__c</fullName>
    <label>z_Implementation Services Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>