unpackaged/main/default/objects/Contract/fields/Indemnity_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Clause_Ref__c</fullName>
    <label>Indemnity Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>