unpackaged/main/default/objects/Contract/fields/Indemnity_Subject_to_Control_of_Claim__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Subject_to_Control_of_Claim__c</fullName>
    <label>Indemnity Subject to Control of Claim</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>