unpackaged/main/default/objects/Contract/fields/Independent_Review_Report__c.field-meta.xml
<CustomField>
    <fullName>Independent_Review_Report__c</fullName>
    <inlineHelpText>If yes, independent review/audit is permitted under the agreement</inlineHelpText>
    <label>Independent Review/Report</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>