unpackaged/main/default/objects/Contract/fields/Independent_Review_Report_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Independent_Review_Report_Clause_Ref__c</fullName>
    <label>Independent Review/Report Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>