unpackaged/main/default/objects/Contract/fields/Independent_Review_Report_Detail__c.field-meta.xml
<CustomField>
    <fullName>Independent_Review_Report_Detail__c</fullName>
    <label>Independent Review/Report Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>