unpackaged/main/default/objects/Contract/fields/Indexation__c.field-meta.xml
<CustomField>
    <fullName>Indexation__c</fullName>
    <label>Indexation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>