unpackaged/main/default/objects/Contract/fields/Indexation_ASM__c.field-meta.xml
<CustomField>
    <fullName>Indexation_ASM__c</fullName>
    <label>z_Indexation - ASM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>