unpackaged/main/default/objects/Contract/fields/Indexation_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Clause_Ref__c</fullName>
    <label>Indexation Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>