unpackaged/main/default/objects/Contract/fields/Indexation_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Cloud__c</fullName>
    <label>z_Indexation - Cloud</label>
    <length>100</length>
    <type>Text</type>
</CustomField>