unpackaged/main/default/objects/Contract/fields/Initial_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Period_End_Date__c</fullName>
    <label>Initial Period End Date</label>
    <type>Date</type>
</CustomField>