unpackaged/main/default/objects/Contract/fields/Initial_Period_months__c.field-meta.xml
<CustomField>
    <fullName>Initial_Period_months__c</fullName>
    <label>z_Initial Period (months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>