unpackaged/main/default/objects/Contract/fields/Initial_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Period_Start_Date__c</fullName>
    <label>Initial Period Start Date</label>
    <type>Date</type>
</CustomField>