unpackaged/main/default/objects/Contract/fields/Insurance_Levels_Specified__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Levels_Specified__c</fullName>
    <label>Insurance Levels Specified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>