unpackaged/main/default/objects/Contract/fields/Insurance_Requirements_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Requirements_Clause_Ref__c</fullName>
    <label>Insurance Requirements Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>