unpackaged/main/default/objects/Contract/fields/Insurance_Requirements_Detail__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Requirements_Detail__c</fullName>
    <inlineHelpText>e.g. Delivery frequency of annual insurance certificates to customer regardless of request</inlineHelpText>
    <label>Insurance Requirements Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>