unpackaged/main/default/objects/Contract/fields/Interest_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Interest_Clause_Ref__c</fullName>
    <label>Interest Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>