unpackaged/main/default/objects/Contract/fields/Interest_On_Late_Payment__c.field-meta.xml
<CustomField>
    <fullName>Interest_On_Late_Payment__c</fullName>
    <inlineHelpText>Can T1 charge for interest on late payment?</inlineHelpText>
    <label>Interest On Late Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>