unpackaged/main/default/objects/Contract/fields/Interest_On_Late_Payment_Detail__c.field-meta.xml
<CustomField>
    <fullName>Interest_On_Late_Payment_Detail__c</fullName>
    <inlineHelpText>Interest rate on late payment details</inlineHelpText>
    <label>Interest On Late Payment Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>