unpackaged/main/default/objects/Contract/fields/Invoice_Terms_Dropdown__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Terms_Dropdown__c</fullName>
    <inlineHelpText>If bespoke, refer Other Non-Standard Payment Terms Detail</inlineHelpText>
    <label>Invoice Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>14 days from date of invoice</fullName>
            </value>
            <value>
                <fullName>30 days from date of invoice</fullName>
            </value>
            <value>
                <fullName>45 days from date of invoice</fullName>
            </value>
            <value>
                <fullName>60 days from date of invoice</fullName>
            </value>
            <value>
                <fullName>20 days from end of month of date of invoice</fullName>
            </value>
            <value>
                <fullName>14 days from receipt of invoice</fullName>
            </value>
            <value>
                <fullName>30 days from receipt of invoice</fullName>
            </value>
            <value>
                <fullName>45 days from receipt of invoice</fullName>
            </value>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>