unpackaged/main/default/objects/Contract/fields/IP_Ownership__c.field-meta.xml
<CustomField>
    <fullName>IP_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IP Ownership</label>
    <type>Checkbox</type>
</CustomField>