unpackaged/main/default/objects/Contract/fields/IP_Ownership_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>IP_Ownership_Clause_Ref__c</fullName>
    <label>IP Ownership Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>