unpackaged/main/default/objects/Contract/fields/IP_Ownership_Detail__c.field-meta.xml
<CustomField>
    <fullName>IP_Ownership_Detail__c</fullName>
    <label>IP Ownership Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>