unpackaged/main/default/objects/Contract/fields/Key_Personnel_Detail__c.field-meta.xml
<CustomField>
    <fullName>Key_Personnel_Detail__c</fullName>
    <label>Key Personnel Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>