unpackaged/main/default/objects/Contract/fields/Lawyer_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Allocated__c</fullName>
    <label>Lawyer Allocated</label>
    <length>50</length>
    <type>Text</type>
</CustomField>