unpackaged/main/default/objects/Contract/fields/Liability_Cap_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Liability_Cap_Clause_Ref__c</fullName>
    <label>Liability Cap Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>