unpackaged/main/default/objects/Contract/fields/Liability_Cap_Exclusions_Detail__c.field-meta.xml
<CustomField>
    <fullName>Liability_Cap_Exclusions_Detail__c</fullName>
    <inlineHelpText>All liability cap exclusions</inlineHelpText>
    <label>Liability Cap Exclusions Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>