unpackaged/main/default/objects/Contract/fields/Liability_for_Consequential_Loss_Detail__c.field-meta.xml
<CustomField>
    <fullName>Liability_for_Consequential_Loss_Detail__c</fullName>
    <label>Liability for Consequential Loss Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>