unpackaged/main/default/objects/Contract/fields/Liability_for_Replacement_System__c.field-meta.xml
<CustomField>
    <fullName>Liability_for_Replacement_System__c</fullName>
    <inlineHelpText>If yes, T1 liable for the costs of replacement system</inlineHelpText>
    <label>Liability for Replacement System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>