unpackaged/main/default/objects/Contract/fields/Liability_for_Replacement_System_Detail__c.field-meta.xml
<CustomField>
    <fullName>Liability_for_Replacement_System_Detail__c</fullName>
    <inlineHelpText>Cap applicable to replacement cost liability</inlineHelpText>
    <label>Liability for Replacement System Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>