unpackaged/main/default/objects/Contract/fields/Licence_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Licence_Fee_Amount__c</fullName>
    <label>z_Licence Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>