unpackaged/main/default/objects/Contract/fields/Licence_Fee_Details__c.field-meta.xml
<CustomField>
    <fullName>Licence_Fee_Details__c</fullName>
    <label>z_Licence Fee Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>