unpackaged/main/default/objects/Contract/fields/Licence_Fee_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Licence_Fee_Indicator__c</fullName>
    <formula>IF(Licence_Fee_Amount__c &lt;= 100000 , &#39;Low&#39;, 
 IF(Licence_Fee_Amount__c&gt;500000, &#39;High&#39;, 
IF(ISBLANK(Licence_Fee_Amount__c), &#39;&#39;, 
  &#39;Medium&#39;)))</formula>
    <label>z_Licence Fee Indicator</label>
    <type>Text</type>
</CustomField>