unpackaged/main/default/objects/Contract/fields/Licence_Type__c.field-meta.xml
<CustomField>
    <fullName>Licence_Type__c</fullName>
    <label>Licence/Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>Flip to SaaS (new contract)</fullName>
            </value>
            <value>
                <fullName>Flip to SaaS (variation)</fullName>
            </value>
            <value>
                <fullName>Cloud Services only</fullName>
            </value>
            <value>
                <fullName>Perpetual on Cloud</fullName>
            </value>
            <value>
                <fullName>Perpetual on Cloud (new contract)</fullName>
            </value>
            <value>
                <fullName>Perpetual on Cloud (variation)</fullName>
            </value>
            <value>
                <fullName>Perpetual On Premise</fullName>
            </value>
            <value>
                <fullName>Subscription On Premise</fullName>
            </value>
            <value>
                <fullName>Flip to Subscription On Premise (new contract)</fullName>
            </value>
            <value>
                <fullName>Flip to Subscription (variation)</fullName>
            </value>
            <value>
                <fullName>Licence Agreement only</fullName>
            </value>
            <value>
                <fullName>Consulting only</fullName>
            </value>
            <value>
                <fullName>AMS only</fullName>
            </value>
            <value>
                <fullName>Early Adopter Program</fullName>
            </value>
            <value>
                <fullName>DRaaS Standalone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>