unpackaged/main/default/objects/Contract/fields/Liquidated_Damages_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Liquidated_Damages_Clause_Ref__c</fullName>
    <label>Liquidated Damages Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>