unpackaged/main/default/objects/Contract/fields/Liquidated_Damages_Detail__c.field-meta.xml
<CustomField>
    <fullName>Liquidated_Damages_Detail__c</fullName>
    <label>Liquidated Damages Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>