unpackaged/main/default/objects/Contract/fields/Local_Consultants_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Local_Consultants_Clause_Ref__c</fullName>
    <label>Local Consultants Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>