unpackaged/main/default/objects/Contract/fields/Local_Consultants_Required__c.field-meta.xml
<CustomField>
    <fullName>Local_Consultants_Required__c</fullName>
    <inlineHelpText>If yes, use of local consultants is required</inlineHelpText>
    <label>Local Consultants Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>