unpackaged/main/default/objects/Contract/fields/Losses_Deemed_Direct_Payable__c.field-meta.xml
<CustomField>
    <fullName>Losses_Deemed_Direct_Payable__c</fullName>
    <label>Losses Deemed Direct/Payable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>