unpackaged/main/default/objects/Contract/fields/Losses_Deemed_Direct_Payable_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Losses_Deemed_Direct_Payable_Clause_Ref__c</fullName>
    <label>Losses Deemed Direct/Payable Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>