unpackaged/main/default/objects/Contract/fields/Losses_Deemed_Direct_Payable_Detail__c.field-meta.xml
<CustomField>
    <fullName>Losses_Deemed_Direct_Payable_Detail__c</fullName>
    <label>Losses Deemed Direct/Payable Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>