unpackaged/main/default/objects/Contract/fields/Material_Contract__c.field-meta.xml
<CustomField>
    <fullName>Material_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Material Contract Info</label>
    <type>Checkbox</type>
</CustomField>