unpackaged/main/default/objects/Contract/fields/Media_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Media_Clause_Ref__c</fullName>
    <label>Media Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>