unpackaged/main/default/objects/Contract/fields/Media_Press_Statements__c.field-meta.xml
<CustomField>
    <fullName>Media_Press_Statements__c</fullName>
    <inlineHelpText>For other, See Other Non-Standard Legal Terms</inlineHelpText>
    <label>Media/Press Statements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not permitted without consent</fullName>
            </value>
            <value>
                <fullName>Permitted consent not required</fullName>
            </value>
            <value>
                <fullName>Customer permitted - T1 gagged</fullName>
            </value>
            <value>
                <fullName>T1 permitted - Customer gagged</fullName>
            </value>
            <value>
                <fullName>Not specified - consent recommended</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>