unpackaged/main/default/objects/Contract/fields/Media_Prohibition__c.field-meta.xml
<CustomField>
    <fullName>Media_Prohibition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Media Prohibition</label>
    <type>Checkbox</type>
</CustomField>