unpackaged/main/default/objects/Contract/fields/Media_Prohibition_Detail__c.field-meta.xml
<CustomField>
    <fullName>Media_Prohibition_Detail__c</fullName>
    <label>z_Media Prohibition Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>