unpackaged/main/default/objects/Contract/fields/Milestone_Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Payment_Details__c</fullName>
    <label>Milestone Payments Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>