unpackaged/main/default/objects/Contract/fields/Milestone_Payments__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Payments__c</fullName>
    <label>Milestone Payments/Payment Gates</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>