unpackaged/main/default/objects/Contract/fields/Milestone_Payments_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Payments_Clause_Ref__c</fullName>
    <label>Milestone Payments Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>