unpackaged/main/default/objects/Contract/fields/Nominated_Host_Changes_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Host_Changes_Clause_Ref__c</fullName>
    <label>Nominated Host Changes Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>