unpackaged/main/default/objects/Contract/fields/Non_Standard_Contractual_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Contractual_Arrangements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Non-Standard Contractual Arrangements</label>
    <type>Checkbox</type>
</CustomField>