unpackaged/main/default/objects/Contract/fields/Non_Standard_Data_Access_Detail__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Data_Access_Detail__c</fullName>
    <inlineHelpText>Detail of any non-standard terms relating to Customer data access</inlineHelpText>
    <label>Non-Standard Data Access Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>